--- a/tests/org.eclipse.rap.addons.ckeditor.test/.project
+++ b/tests/org.eclipse.rap.addons.ckeditor.test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.eclipsesource.widgets.ckeditor.test</name>
+	<name>org.eclipse.rap.addons.ckeditor.test</name>
 	<comment></comment>
 	<projects>
 	</projects>
