--- a/tests/org.eclipse.rap.addons.ckeditor.test/pom.xml
+++ b/tests/org.eclipse.rap.addons.ckeditor.test/pom.xml
@@ -21,20 +21,8 @@
     <relativePath>../../../org.eclipse.rap.incubator.releng/releng/org.eclipse.rap.incubator.releng/parent</relativePath>
   </parent>
 
-  <artifactId>org.eclipse.rap.richtext.build</artifactId>
+  <artifactId>org.eclipse.rap.addons.ckeditor.test</artifactId>
   <version>0.1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-
-  <modules>
-    <!-- bundles -->
-    <module>../../bundles/org.eclipse.rap.addons.ckeditor</module>
-    <!-- tests -->
-    <!-- examples -->
-    <module>../../tests/org.eclipse.rap.addons.ckeditor.test</module>
-    <!-- features -->
-    <module>../../features/org.eclipse.rap.richtext.feature</module>
-    <!-- releng -->
-    <module>repository</module>
-  </modules>
+  <packaging>eclipse-plugin</packaging>
 
 </project>
