Refactor demo and example projects to new naming
org.eclipse.rap.demo.ckeditor
org.eclipse.rap.examples.pages.ckeditor

--- a/examples/org.eclipse.rap.demo.ckeditor/.project
+++ b/examples/org.eclipse.rap.demo.ckeditor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.eclipsesource.widgets.ckeditor.demo</name>
+	<name>org.eclipse.rap.demo.ckeditor</name>
 	<comment></comment>
 	<projects>
 	</projects>
