--- a/examples/org.eclipse.rap.examples.pages.ckeditor/.project
+++ b/examples/org.eclipse.rap.examples.pages.ckeditor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.rap.demo.ckeditor</name>
+	<name>org.eclipse.rap.examples.pages.ckeditor</name>
 	<comment></comment>
 	<projects>
 	</projects>
