--- a/pom.xml
+++ b/pom.xml
@@ -62,4 +62,15 @@
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
+
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<url>http://srvrepo.tolina.local/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<url>http://srvrepo.tolina.local/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
