--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
 	<groupId>de.tolina.common</groupId>
 	<artifactId>rap-ckeditor</artifactId>
-	<version>2.3.2</version>
+	<version>2.3.3-SNAPSHOT</version>
 
 	<url>https://github.com/arxes-tolina/rap-ckeditor</url>
 
